Rename Provenance -> Label
's/Provenance/Label/g' 's/provenance/label/g' with human vetting.

--- a/templates/write.html
+++ b/templates/write.html
@@ -45,7 +45,7 @@
               <input id="subject" type="text" placeholder="Subject"></input>
               <input id="predicate" type="text" placeholder="Predicate"></input>
               <input id="object" type="text" placeholder="Object"></input>
-              <input id="provenance" type="text" placeholder="Provenance"></input>
+              <input id="label" type="text" placeholder="Label"></input>
           </div>
         </div>
         <div class="row button-row">
@@ -59,7 +59,7 @@
               <input id="rsubject" type="text" placeholder="Subject"></input>
               <input id="rpredicate" type="text" placeholder="Predicate"></input>
               <input id="robject" type="text" placeholder="Object"></input>
-              <input id="rprovenance" type="text" placeholder="Provenance"></input>
+              <input id="rlabel" type="text" placeholder="Label"></input>
               </div>
           </div><!-- /.col-xs-12 main -->
         <div class="row button-row">
