Updated naming; error handling

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -30,13 +30,13 @@
       <div class="col-sm-10 col-xs-12" id="main">
         <div class="row">
           <div class="col-sm-12 col-xs-12">
-              <h2> Delete all [in, out] predicates for node [subject]: </h2>
-              <input id="object" type="text" placeholder="Object"></input>
+              <h2> Delete all [in, out] predicates for node: </h2>
+              <input id="node" type="text" placeholder="Node"></input>
           </div>
         </div>
         <div class="row button-row">
           <div class="col-sm-12 col-xs-12">
-              <button id="delete_object" type="button" class="btn">Delete object</button>
+              <button id="delete_node" type="button" class="btn">Delete node</button>
           </div>
         </div>
         <div class="row">
