Rename triple entities were relevant

--- a/templates/write.html
+++ b/templates/write.html
@@ -50,7 +50,7 @@
         </div>
         <div class="row button-row">
           <div class="col-sm-12 col-xs-12">
-              <button id="add_triple" type="button" class="btn">Add Triple</button>
+              <button id="add_quad" type="button" class="btn">Add Quad</button>
           </div>
         </div>
         <div class="row">
@@ -64,7 +64,7 @@
           </div><!-- /.col-xs-12 main -->
         <div class="row button-row">
           <div class="col-sm-12 col-xs-12">
-              <button id="delete_triple" type="button" class="btn">Delete Triple</button>
+              <button id="delete_quad" type="button" class="btn">Delete Quad</button>
           </div>
         </div>
         </div>
