initial graphql support

--- a/templates/sidebar.tmpl
+++ b/templates/sidebar.tmpl
@@ -29,6 +29,7 @@
             <li><a id="gizmo-dropdown" href="#">Gizmo</a></li>
             <li><a id="gremlin-dropdown" href="#">Gremlin</a></li>
             <li><a id="mql-dropdown" href="#">MQL</a></li>
+            <li><a id="graphql-dropdown" href="#">GraphQL</a></li>
           </ul>
         </div>
       </div>
