--- a/templates/sidebar.tmpl
+++ b/templates/sidebar.tmpl
@@ -49,7 +49,7 @@
         <button class="btn btn-sm center-block dropdown-toggle" type="button" data-toggle="dropdown"> Documentation <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a href="/docs/Overview" target="_blank">Overview</a></li>
+            <li><a href="/docs/Quickstart-As-Application" target="_blank">Quickstart</a></li>
             <li><a href="/docs/GizmoAPI" target="_blank">Gizmo API</a></li>
             <li><a href="/docs/MQL" target="_blank">MQL</a></li>
             <li><a href="/docs/Configuration" target="_blank">Configuration</a></li>
