ui: serve 3rd-party files statically; fixes #501

--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -17,36 +17,31 @@
     <title>Cayley</title>
     <meta charset="utf-8" />
     <!-- Latest compiled and minified CSS -->
-    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="/static/third_party/flatly/bootstrap.min.css">
     <!-- IE -->
     <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
     <!-- other browsers -->
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-    <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.21.0/codemirror.min.css">
+    <link href='/static/third_party/OpenSans.css' rel='stylesheet' type='text/css'>
+    <link href='/static/third_party/Inconsolata.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/third_party/codemirror/codemirror.min.css">
     <link rel="stylesheet" href="/static/css/grid.css">
     <link rel="stylesheet" href="/static/css/query_editor.css">
 
-    <!-- Optional theme -->
-    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">-->
-
     <!-- Latest compiled and minified JavaScript -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="/static/third_party/jquery.min.js"></script>
+    <script src="/static/third_party/bootstrap.min.js"></script>
 
     <!-- Codemirror -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.21.0/codemirror.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.21.0/addon/edit/matchbrackets.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.21.0/addon/comment/continuecomment.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.21.0/mode/javascript/javascript.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/snap.svg/0.2.0/snap.svg-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js"></script>
+    <script src="/static/third_party/codemirror/codemirror.min.js"></script>
+    <script src="/static/third_party/codemirror/addon/edit/matchbrackets.min.js"></script>
+    <script src="/static/third_party/codemirror/addon/comment/continuecomment.min.js"></script>
+    <script src="/static/third_party/codemirror/mode/javascript/javascript.min.js"></script>
+    <script src="/static/third_party/snap.svg-min.js"></script>
+    <script src="/static/third_party/fabric.min.js"></script>
 
     <!-- D3.js -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.1/d3.min.js"></script>
+    <script src="/static/third_party/d3.min.js"></script>
 {{end}}
 
 {{define "foot"}}
